[tool.poetry]
name = "PianoHarmonyRNN"
version = "0.1.0"
description = "Poetry was used for managing this project"
license = "MIT"
authors = ["Simona Dimitrova <222667@buas.nl>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25"
numpy = "^1.21"
matplotlib = {version = "^3.8.1", python = ">=3.9" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
